Excel Exporter integrated, but not activated yet

--- a/src/main/webapp/VAADIN/themes/mytheme/mytheme.scss
+++ b/src/main/webapp/VAADIN/themes/mytheme/mytheme.scss
@@ -55,19 +55,19 @@ $v-background-color: hsl(65, 30%, 95%);
         padding-bottom: 0px;
     }
     .v-grid-cell.colorGold {
-        background-image: url('gold2.png');
+        background-image: url('gold.png');
     }
     .v-grid-cell.colorSilver {
-        background-image: url('silver2.png');
+        background-image: url('silver.png');
     }
     .v-grid-cell.colorBronze {
-        background-image: url('bronze2.png');
+        background-image: url('bronze.png');
     }
     .v-grid-cell.colorField {
-        background-image: url('field2.png');
+        background-image: url('field.png');
     }
     .v-grid-cell.colorDQ {
-        background-image: url('dq2.png');
+        background-image: url('dq.png');
     }
     .v-grid-cell.colorBlack {
         background-color: black;
