--- a/src/main/webapp/VAADIN/themes/mytheme/mytheme.scss
+++ b/src/main/webapp/VAADIN/themes/mytheme/mytheme.scss
@@ -38,8 +38,8 @@ $v-background-color: hsl(65, 30%, 95%);
 
     // Insert your own theme rules here
     .v-ui {
-        width: 93% !important;
-        padding-left: 5%;
+        width: 95% !important;
+        padding-left: 3%;
         padding-top: 10px;
     }
     .v-margin-left {
@@ -78,5 +78,21 @@ $v-background-color: hsl(65, 30%, 95%);
     .v-panel-caption {
         background-image: -webkit-linear-gradient(top, gold 0%, lightgoldenrodyellow 100%);
         background-image: linear-gradient(to bottom, gold 0%, lightgoldenrodyellow 100%);
+    }
+    .ChatBox {
+        margin-left: 40px;
+        margin-bottom: -20px;
+    }
+    .ChatBox .FrozenLines {
+        padding-left: 5px;
+        margin: 0;
+    }
+    .ChatBox .LiveLines {
+        padding-left: 5px;
+        margin: 0;
+    }
+    .ChatBox .gwt-TextBox {
+        margin-left: 7px;
+        width: 99% !important;
     }
 }
