--- a/src/main/webapp/VAADIN/themes/mytheme/styles.css
+++ b/src/main/webapp/VAADIN/themes/mytheme/styles.css
@@ -15047,8 +15047,8 @@ div.v-layout.v-horizontal.v-widget {
 }
 
 .mytheme .v-ui {
-	width: 93% !important;
-	padding-left: 5%;
+	width: 95% !important;
+	padding-left: 3%;
 	padding-top: 10px;
 }
 
@@ -15099,4 +15099,24 @@ div.v-layout.v-horizontal.v-widget {
 .mytheme .v-panel-caption {
 	background-image: -webkit-linear-gradient(top, gold 0%, lightgoldenrodyellow 100%);
 	background-image: linear, to bottom, gold 0%, lightgoldenrodyellow 100%;
+}
+
+.mytheme .ChatBox {
+	margin-left: 40px;
+	margin-bottom: -20px;
+}
+
+.mytheme .ChatBox .FrozenLines {
+	padding-left: 5px;
+	margin: 0;
+}
+
+.mytheme .ChatBox .LiveLines {
+	padding-left: 5px;
+	margin: 0;
+}
+
+.mytheme .ChatBox .gwt-TextBox {
+	margin-left: 7px;
+	width: 99% !important;
 }
