--- a/src/main/webapp/VAADIN/themes/mytheme/mytheme.scss
+++ b/src/main/webapp/VAADIN/themes/mytheme/mytheme.scss
@@ -95,4 +95,8 @@ $v-background-color: hsl(65, 30%, 95%);
         margin-left: 7px;
         width: 99% !important;
     }
+    .blackuser {
+        font-weight: bold;
+        color: black;
+    }
 }
