--- a/src/main/webapp/VAADIN/themes/mytheme/styles.css
+++ b/src/main/webapp/VAADIN/themes/mytheme/styles.css
@@ -15120,3 +15120,8 @@ div.v-layout.v-horizontal.v-widget {
 	margin-left: 7px;
 	width: 99% !important;
 }
+
+.mytheme .blackuser {
+	font-weight: bold;
+	color: black;
+}
