use inner and outer style for user

--- a/src/main/webapp/VAADIN/themes/mytheme/mytheme.scss
+++ b/src/main/webapp/VAADIN/themes/mytheme/mytheme.scss
@@ -99,4 +99,8 @@ $v-background-color: hsl(65, 30%, 95%);
         font-weight: bold;
         color: black;
     }
+    .blueuser {
+        font-weight: normal;
+        color: blue;
+    }
 }
